<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Journal Application</string>
    <string name="btn_create_account">Create an account</string>
    <string name="minimum_password">Password should be not less than 5 characters</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="send_password_reset_email" tools:keep="@string/send_password_reset_email">Send Password reset email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">I am a new user!</string>
    <string name="btn_link_to_login">Already registered. Login in!</string>
    <string name="title_activity_reset_password" tools:keep="@string/title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_remove" tools:keep="@string/btn_remove">Remove</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered email address to send you password reset instructions</string>
    <string name="lbl_new_journal_title">New Journal</string>
    <string name="hint_enter_journal">Enter your journal!</string>
    <string name="msg_no_journals">You have no journals!</string>
    <string name="lbl_edit_journal_title">Edit Journal</string>
    <string name="label">Journals</string>
    <string name="log_out">Log out</string>
    <string name="signin">Sign in with google</string>
</resources>
