<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/coordinator_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".userauthentication.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                style="@style/EditTextEmailStyle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                style="@style/EditTextPasswordStyle" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            app:fontFamily="sans-serif"
            android:text="@string/btn_login"
            style="@style/buttonStyle" />


        <!-- Link to Login Screen -->


        <Button
            android:id="@+id/googleButton"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="@color/white"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:drawableLeft="@drawable/google_plus"
            android:paddingLeft="19dp"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableStart="@drawable/google_plus"
            android:paddingStart="19dp"
            tools:ignore="RtlSymmetry">


        </Button>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:background="@drawable/divider"
            android:layout_width="240dp"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@null"

            android:textSize="16sp"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>




    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>